--- a/index.html
+++ b/index.html
@@ -4,262 +4,238 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ageflix - Home</title>
-
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+  * { box-sizing: border-box; margin:0; padding:0; font-family: 'Roboto', sans-serif; }
+  body { background: #000; color: #fff; overflow-x: hidden; }
 
-* { box-sizing: border-box; margin:0; padding:0; font-family: 'Roboto', sans-serif; }
-body { 
-  background: linear-gradient(to bottom, #141414, #000);
-  color: #fff;
-}
+  /* خلفية فيديو */
+  .video-bg {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    filter: brightness(0.35) blur(2px);
+  }
 
-/* Navbar */
-nav.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgba(0,0,0,0.9);
-  padding: 15px 30px;
-  flex-wrap: wrap;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-.navbar .logo { font-size: 28px; font-weight: bold; color: #e50914; letter-spacing: 1px; }
-.navbar ul { display: flex; list-style: none; justify-content: center; align-items: center; margin: 0; padding: 0; }
-.navbar ul li { position: relative; margin: 0 20px; }
-.navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; font-size:16px; transition:0.3s; }
-.navbar ul li a:hover { color:#e50914; }
+  /* Navbar */
+  nav.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(0,0,0,0.75);
+    backdrop-filter: blur(8px);
+    padding: 15px 25px;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+  }
+  .navbar .logo { font-size: 28px; font-weight: bold; color: #e50914; }
+  .navbar ul { display: flex; list-style: none; align-items: center; }
+  .navbar ul li { margin: 0 15px; position: relative; }
+  .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
+  .navbar ul li a:hover { color:#e50914; }
 
-/* Dropdown */
-.navbar ul li .dropdown {
-  display: none;
-  position: absolute;
-  top: 35px;
-  left: 0;
-  background: #1c1c1c;
-  border-radius: 6px;
-  min-width: 140px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-  overflow: hidden;
-}
-.navbar ul li .dropdown a {
-  display: block;
-  padding: 10px 15px;
-  color: #fff;
-  font-weight: normal;
-  transition: 0.3s;
-}
-.navbar ul li .dropdown a:hover {
-  background: #e50914;
-}
-.navbar ul li:hover .dropdown {
-  display: block;
-  animation: fadeIn 0.3s ease;
-}
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(5px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+  /* Dropdown */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%; left: 0;
+    background-color: #222;
+    padding: 10px 0;
+    min-width: 130px;
+    border-radius: 5px;
+    z-index: 10;
+  }
+  .dropdown-content a {
+    display: block;
+    color: #fff;
+    padding: 8px 15px;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover { background-color: #e50914; }
+  .navbar ul li:hover .dropdown-content { display: block; }
 
-/* Banner Slider */
-.banner-slider {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
-  background: #000;
-}
-.slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1.5s ease-in-out; }
-.slide.active { opacity: 1; z-index: 2; }
-.slide img { 
-  width: 100%; 
-  height: 100%; 
-  object-fit: contain; /* تظهر الصورة كاملة */
-  background: #000;
-}
+  /* Hero Section */
+  section.hero {
+    text-align: center;
+    padding: 140px 20px;
+  }
+  section.hero h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+    color: #fff;
+    text-shadow: 0 0 25px rgba(255,255,255,0.2);
+  }
+  section.hero p {
+    font-size: 20px;
+    color: #bbb;
+    margin-bottom: 40px;
+  }
 
-.prev, .next { 
-  position: absolute; 
-  top: 50%; 
-  transform: translateY(-50%); 
-  background-color: rgba(0,0,0,0.6); 
-  color: #fff; 
-  border: none; 
-  padding: 10px; 
-  cursor: pointer; 
-  font-size: 28px; 
-  z-index: 3; 
-  border-radius: 50%;
-  transition: background 0.3s;
-}
-.prev:hover, .next:hover { background: rgba(229,9,20,0.8); }
-.prev { left: 20px; }
-.next { right: 20px; }
+  /* Start Button */
+  #startBtn {
+    padding: 15px 50px;
+    font-size: 22px;
+    background-color: #e50914;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    letter-spacing: 1px;
+    box-shadow: 0 0 20px rgba(229,9,20,0.6);
+    transition: all 0.3s ease;
+  }
+  #startBtn:hover {
+    background-color: #b00610;
+    transform: scale(1.08);
+    box-shadow: 0 0 25px rgba(229,9,20,0.8);
+  }
 
-.dots { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
-.dot { width: 14px; height: 14px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; transition: background 0.3s; }
-.dot.active, .dot:hover { background-color: #e50914; }
+  #webcam-container canvas {
+    border: 2px solid #e50914;
+    border-radius: 8px;
+    margin-top: 20px;
+    box-shadow: 0 0 20px rgba(229,9,20,0.4);
+  }
 
-/* Hero Section */
-section.hero {
-  text-align: center;
-  padding: 80px 20px;
-}
-section.hero h1 {
-  font-size: 40px;
-  margin-bottom: 10px;
-  color: #fff;
-  letter-spacing: 1px;
-}
-section.hero p {
-  font-size: 20px;
-  color: #ccc;
-  margin-bottom: 30px;
-}
+  /* Popup */
+  #popup {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  .popup-content {
+    background: #111;
+    border: 2px solid #e50914;
+    padding: 30px 50px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 25px rgba(229,9,20,0.7);
+    animation: fadeIn 0.5s ease;
+  }
+  .popup-content h2 { font-size: 28px; margin-bottom: 15px; }
+  .popup-content span { color: #e50914; font-weight: bold; }
+  #nextBtn {
+    background-color: #e50914;
+    color: white;
+    border: none;
+    padding: 12px 45px;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  #nextBtn:hover { background-color: #b00610; }
 
-/* Start Button */
-#startBtn {
-  padding: 15px 40px;
-  font-size: 20px;
-  background-color: #e50914;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-weight: bold;
-  cursor: pointer;
-  letter-spacing: 1px;
-  transition: 0.3s;
-}
-#startBtn:hover {
-  background-color: #b00610;
-  transform: scale(1.05);
-}
-
-/* Webcam */
-#webcam-container, #label-container {
-  margin: 20px auto;
-  display: flex;
-  justify-content: center;
-}
-
-/* Responsive */
-@media(max-width:768px){
-  .navbar ul { flex-direction: column; align-items: flex-start; }
-  .navbar ul li { margin: 10px 0; }
-  section.hero h1 { font-size: 28px; }
-  .banner-slider { height: 60vh; }
-  #startBtn { width: 80%; font-size: 18px; }
-}
+  @keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.9); }
+    to { opacity: 1; transform: scale(1); }
+  }
 </style>
 </head>
-
 <body>
 
-<!-- Navbar -->
-<nav class="navbar">
-  <div class="logo">Ageflix</div>
-  <ul>
-    <li><a href="about.html">About</a></li>
-    <li>
-      <a href="#">Movies ▾</a>
-      <div class="dropdown">
-        <a href="kids.html">Kids</a>
-        <a href="adult.html">Adult</a>
-        <a href="senior.html">Senior</a>
-      </div>
-    </li>
-  </ul>
-</nav>
+  <!-- Background Video -->
+  <video autoplay muted loop class="video-bg">
+    <source src="netflix-bg.mp4" type="video/mp4">
+  </video>
 
-<!-- Banner Slider -->
-<section class="banner-slider" id="bannerSlider">
-  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
-  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
-  <button class="prev">&#10094;</button>
-  <button class="next">&#10095;</button>
-  <div class="dots"></div>
-</section>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">Ageflix</div>
+    <ul>
+      <li><a href="about.html">About</a></li>
+      <li>
+        <a href="#">Movies ▾</a>
+        <div class="dropdown-content">
+          <a href="kids.html">Kids</a>
+          <a href="adult.html">Adult</a>
+          <a href="senior.html">Senior</a>
+        </div>
+      </li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-<!-- Hero Section -->
-<section class="hero">
-  <h1>Welcome to Ageflix</h1>
-  <p>Discover movies according to your age group!</p>
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Welcome to Ageflix</h1>
+    <p>Discover movies according to your age group!</p>
 
-  <div id="webcam-container"></div>
-  <div id="label-container"></div>
+    <div id="webcam-container"></div>
+    <div id="label-container"></div>
 
-  <button id="startBtn">Start Camera & Detect Age</button>
-</section>
+    <button id="startBtn">Start Camera & Detect Age</button>
+  </section>
 
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
+  <!-- Popup -->
+  <div id="popup">
+    <div class="popup-content">
+      <h2 id="ageGroupText"></h2>
+      <p>We will suggest movies suitable for you.</p>
+      <button id="nextBtn">Next ➜</button>
+    </div>
+  </div>
 
-<script>
-const slides = document.querySelectorAll('.slide');
-const prev = document.querySelector('.prev');
-const nextBtn = document.querySelector('.next');
-const dotsContainer = document.querySelector('.dots');
-let slideIndex = 0;
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
-// سلايدر بانر
-function showSlide(index){
-  if(index<0) slideIndex=slides.length-1;
-  else if(index>=slides.length) slideIndex=0;
-  else slideIndex=index;
-  slides.forEach((s,i)=>{
-    s.classList.remove('active');
-    if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
-  });
-  slides[slideIndex].classList.add('active');
-  if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
-}
-prev.addEventListener('click',()=>showSlide(slideIndex-1));
-nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
-slides.forEach((_,i)=>{
-  const dot=document.createElement('span');
-  dot.classList.add('dot');
-  if(i===0) dot.classList.add('active');
-  dot.addEventListener('click',()=>showSlide(i));
-  dotsContainer.appendChild(dot);
-});
-setInterval(()=>showSlide(slideIndex+1), 5000);
+  <script>
+    const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+    let model, webcam, maxPredictions;
 
-// Teachable Machine setup
-const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-let model, webcam, maxPredictions;
+    async function init() {
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-async function init() {
-  const modelURL = URL + "model.json";
-  const metadataURL = URL + "metadata.json";
-  model = await tmImage.load(modelURL, metadataURL);
-  maxPredictions = model.getTotalClasses();
+      const flip = true;
+      webcam = new tmImage.Webcam(400, 300, flip);
+      await webcam.setup();
+      await webcam.play();
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
+      window.requestAnimationFrame(loop);
+    }
 
-  const flip = true;
-  webcam = new tmImage.Webcam(400, 300, flip);
-  await webcam.setup();
-  await webcam.play();
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
-  window.requestAnimationFrame(loop);
-}
+    async function loop() {
+      webcam.update();
+      await predict();
+      window.requestAnimationFrame(loop);
+    }
 
-async function loop() {
-  webcam.update();
-  await predict();
-  window.requestAnimationFrame(loop);
-}
+    async function predict() {
+      const prediction = await model.predict(webcam.canvas);
+      const best = prediction.reduce((a,b) => a.probability > b.probability ? a : b);
+      if(best.probability > 0.85) {
+        showPopup(best.className);
+      }
+    }
 
-async function predict() {
-  const prediction = await model.predict(webcam.canvas);
-  let labelContainer = document.getElementById("label-container");
-  labelContainer.innerHTML = "";
-  prediction.forEach(p => {
-    labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`;
-  });
-}
+    function showPopup(group) {
+      const popup = document.getElementById("popup");
+      const text = document.getElementById("ageGroupText");
+      text.innerHTML = `Detected Age Group: <span>${group}</span>`;
+      popup.style.display = "flex";
 
-document.getElementById("startBtn").addEventListener("click", init);
-</script>
+      document.getElementById("nextBtn").onclick = function() {
+        popup.style.display = "none";
+        if(group.toLowerCase() === "kids") window.location.href = "kids.html";
+        else if(group.toLowerCase() === "adult") window.location.href = "adult.html";
+        else if(group.toLowerCase() === "senior") window.location.href = "senior.html";
+      };
+    }
+
+    document.getElementById("startBtn").addEventListener("click", init);
+  </script>
+
 </body>
 </html>
