--- a/index.html
+++ b/index.html
@@ -1,170 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ageflix - Home</title>
-<style>
-  * { box-sizing: border-box; margin:0; padding:0; font-family: 'Roboto', sans-serif; }
-  body { background: #000; color: #fff; overflow-x: hidden; }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ageflix - Home</title>
+  <style>
+    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
+    body { background: #f0f0f0; }
 
-  /* خلفية فيديو */
-  .video-bg {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    object-fit: cover;
-    z-index: -1;
-    filter: brightness(0.35) blur(2px);
-  }
+    /* Navbar */
+    nav.navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #111;
+      color: #fff;
+      padding: 10px 20px;
+      flex-wrap: wrap;
+    }
+    .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: red; }
+    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
+    .navbar ul li { margin: 0 15px; }
+    .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
+    .navbar .icon { flex: 1; text-align: right; }
 
-  /* Navbar */
-  nav.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: rgba(0,0,0,0.75);
-    backdrop-filter: blur(8px);
-    padding: 15px 25px;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-  }
-  .navbar .logo { font-size: 28px; font-weight: bold; color: #e50914; }
-  .navbar ul { display: flex; list-style: none; align-items: center; }
-  .navbar ul li { margin: 0 15px; position: relative; }
-  .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
-  .navbar ul li a:hover { color:#e50914; }
+    /* Marquee */
+    .marquee-container {
+      width: 100%;
+      overflow: hidden;
+      background: #222;
+      color: #fff;
+      font-size: 22px;
+      padding: 10px 0;
+      position: relative;
+    }
+    .marquee {
+      display: inline-block;
+      white-space: nowrap;
+      animation: marquee 15s linear infinite;
+    }
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
 
-  /* Dropdown */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    top: 100%; left: 0;
-    background-color: #222;
-    padding: 10px 0;
-    min-width: 130px;
-    border-radius: 5px;
-    z-index: 10;
-  }
-  .dropdown-content a {
-    display: block;
-    color: #fff;
-    padding: 8px 15px;
-    text-decoration: none;
-  }
-  .dropdown-content a:hover { background-color: #e50914; }
-  .navbar ul li:hover .dropdown-content { display: block; }
+    /* Banner Slider */
+    .banner-slider {
+      position: relative;
+      overflow: hidden;
+      max-width: 100%;
+      height: 600px;
+      margin-bottom:20px;
+      background:#000;
+    }
+    .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+    }
+    .slide.active { opacity: 1; z-index: 2; }
+    .slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .prev, .next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0,0,0,0.5);
+      color: #fff;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 24px;
+      z-index: 3;
+    }
+    .prev { left: 10px; }
+    .next { right: 10px; }
 
-  /* Hero Section */
-  section.hero {
-    text-align: center;
-    padding: 140px 20px;
-  }
-  section.hero h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
-    color: #fff;
-    text-shadow: 0 0 25px rgba(255,255,255,0.2);
-  }
-  section.hero p {
-    font-size: 20px;
-    color: #bbb;
-    margin-bottom: 40px;
-  }
+    .dots {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 8px;
+      z-index: 3;
+    }
+    .dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: rgba(255,255,255,0.5);
+      cursor: pointer;
+    }
+    .dot.active { background-color: #fff; }
 
-  /* Start Button */
-  #startBtn {
-    padding: 15px 50px;
-    font-size: 22px;
-    background-color: #e50914;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-weight: bold;
-    cursor: pointer;
-    letter-spacing: 1px;
-    box-shadow: 0 0 20px rgba(229,9,20,0.6);
-    transition: all 0.3s ease;
-  }
-  #startBtn:hover {
-    background-color: #b00610;
-    transform: scale(1.08);
-    box-shadow: 0 0 25px rgba(229,9,20,0.8);
-  }
+    /* Hero / Webcam */
+    section.hero { text-align: center; padding: 20px; }
+    section.hero h1 { font-size: 32px; margin-bottom: 10px; }
+    section.hero p { font-size: 20px; margin-bottom: 20px; }
+    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
+    #webcam-container, #label-container { margin: 15px auto; }
 
-  #webcam-container canvas {
-    border: 2px solid #e50914;
-    border-radius: 8px;
-    margin-top: 20px;
-    box-shadow: 0 0 20px rgba(229,9,20,0.4);
-  }
-
-  /* Popup */
-  #popup {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.85);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  .popup-content {
-    background: #111;
-    border: 2px solid #e50914;
-    padding: 30px 50px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 0 25px rgba(229,9,20,0.7);
-    animation: fadeIn 0.5s ease;
-  }
-  .popup-content h2 { font-size: 28px; margin-bottom: 15px; }
-  .popup-content span { color: #e50914; font-weight: bold; }
-  #nextBtn {
-    background-color: #e50914;
-    color: white;
-    border: none;
-    padding: 12px 45px;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  #nextBtn:hover { background-color: #b00610; }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.9); }
-    to { opacity: 1; transform: scale(1); }
-  }
-</style>
+    /* Responsive */
+    @media(max-width:768px){
+      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
+      section.hero h1 { font-size: 24px; }
+      section.hero p { font-size: 16px; }
+      .marquee-container { font-size: 18px; }
+      button#startBtn { font-size: 16px; }
+      .banner-slider { height: 350px; }
+    }
+  </style>
 </head>
 <body>
-
-  <!-- Background Video -->
-  <video autoplay muted loop class="video-bg">
-    <source src="netflix-bg.mp4" type="video/mp4">
-  </video>
 
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">Ageflix</div>
     <ul>
       <li><a href="about.html">About</a></li>
-      <li>
-        <a href="#">Movies ▾</a>
-        <div class="dropdown-content">
-          <a href="kids.html">Kids</a>
-          <a href="adult.html">Adult</a>
-          <a href="senior.html">Senior</a>
-        </div>
-      </li>
+      <li><a href="movies.html">Movies</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+    <div class="icon">🎬</div>
   </nav>
 
-  <!-- Hero -->
+  <!-- Marquee -->
+  <div class="marquee-container">
+    <div class="marquee" id="marqueeText"></div>
+  </div>
+
+  <!-- Banner Slider -->
+  <section class="banner-slider" id="bannerSlider">
+    <div class="slide active">
+      <img src="https://picsum.photos/id/1018/1200/600" alt="Banner 1">
+    </div>
+    <div class="slide">
+      <img src="https://picsum.photos/id/1025/1200/600" alt="Banner 2">
+    </div>
+    <div class="slide">
+      <img src="https://picsum.photos/id/1039/1200/600" alt="Banner 3">
+    </div>
+
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+    <div class="dots"></div>
+  </section>
+
+  <!-- Hero / Age Detection -->
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
     <p>Discover movies according to your age group!</p>
@@ -175,20 +163,12 @@
     <button id="startBtn">Start Camera & Detect Age</button>
   </section>
 
-  <!-- Popup -->
-  <div id="popup">
-    <div class="popup-content">
-      <h2 id="ageGroupText"></h2>
-      <p>We will suggest movies suitable for you.</p>
-      <button id="nextBtn">Next ➜</button>
-    </div>
-  </div>
-
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
   <script>
+    // Age Detection
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
     let model, webcam, maxPredictions;
 
@@ -214,27 +194,80 @@
 
     async function predict() {
       const prediction = await model.predict(webcam.canvas);
-      const best = prediction.reduce((a,b) => a.probability > b.probability ? a : b);
-      if(best.probability > 0.85) {
-        showPopup(best.className);
+      let labelContainer = document.getElementById("label-container");
+      labelContainer.innerHTML = "";
+      prediction.forEach(p => {
+        labelContainer.innerHTML += `<p>${p.className}: ${(p.probability * 100).toFixed(2)}%</p>`;
+      });
+
+      const best = prediction.reduce((a,b)=>a.probability>b.probability?a:b);
+      if(best.probability>0.8){
+        let message = "";
+        let page = "";
+        if(best.className.toLowerCase()==="kids"){ message="You are a Kid! Redirecting to Kids page..."; page="kids.html"; }
+        if(best.className.toLowerCase()==="adult"){ message="You are an Adult! Redirecting to Adult page..."; page="adult.html"; }
+        if(best.className.toLowerCase()==="senior"){ message="You are a Senior! Redirecting to Senior page..."; page="senior.html"; }
+
+        alert(message);
+        window.location.href = page;
       }
     }
 
-    function showPopup(group) {
-      const popup = document.getElementById("popup");
-      const text = document.getElementById("ageGroupText");
-      text.innerHTML = `Detected Age Group: <span>${group}</span>`;
-      popup.style.display = "flex";
+    document.getElementById("startBtn").addEventListener("click", init);
 
-      document.getElementById("nextBtn").onclick = function() {
-        popup.style.display = "none";
-        if(group.toLowerCase() === "kids") window.location.href = "kids.html";
-        else if(group.toLowerCase() === "adult") window.location.href = "adult.html";
-        else if(group.toLowerCase() === "senior") window.location.href = "senior.html";
-      };
+    // Banner Slider JS
+    const slides = document.querySelectorAll('.slide');
+    const prev = document.querySelector('.prev');
+    const next = document.querySelector('.next');
+    const dotsContainer = document.querySelector('.dots');
+    let slideIndex = 0;
+
+    function showSlide(index){
+      if(index < 0) slideIndex = slides.length-1;
+      else if(index >= slides.length) slideIndex = 0;
+      else slideIndex = index;
+
+      slides.forEach((s,i)=>{
+        s.classList.remove('active');
+        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
+      });
+      slides[slideIndex].classList.add('active');
+      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
     }
 
-    document.getElementById("startBtn").addEventListener("click", init);
+    prev.addEventListener('click', ()=> showSlide(slideIndex-1));
+    next.addEventListener('click', ()=> showSlide(slideIndex+1));
+
+    // Dots
+    slides.forEach((_,i)=>{
+      const dot = document.createElement('span');
+      dot.classList.add('dot');
+      if(i===0) dot.classList.add('active');
+      dot.addEventListener('click', ()=>showSlide(i));
+      dotsContainer.appendChild(dot);
+    });
+
+    // Auto slide every 5 seconds
+    setInterval(()=> showSlide(slideIndex+1), 5000);
+
+    // Marquee Text
+    const marqueeTextElem = document.getElementById('marqueeText');
+    const marqueeMessages = [
+      "Ageflix recommends movies based on your age",
+      "Find the perfect movie for kids, adults, and seniors",
+      "Your personalized movie guide!",
+      "Discover films suitable for your age",
+      "Enjoy movies safely with Ageflix"
+    ];
+    let marqueeIndex = 0;
+
+    function updateMarquee(){
+      marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
+      marqueeIndex = (marqueeIndex+1) % marqueeMessages.length;
+    }
+
+    setInterval(updateMarquee, 5000);
+    updateMarquee();
   </script>
 
 </body>
