--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ageflix - Home</title>
   <style>
     * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
@@ -18,11 +18,9 @@
       padding: 10px 20px;
       flex-wrap: wrap;
     }
-    .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: red; }
-    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
-    .navbar ul li { margin: 0 15px; }
+    .navbar .logo { font-size: 24px; font-weight: bold; color: red; }
+    .navbar ul { display: flex; list-style: none; justify-content: center; gap: 20px; }
     .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
-    .navbar .icon { flex: 1; text-align: right; }
 
     /* Marquee */
     .marquee-container {
@@ -44,28 +42,26 @@
       100% { transform: translateX(-100%); }
     }
 
-    /* Banner Slider */
+    /* Slider */
     .banner-slider {
       position: relative;
-      overflow: hidden;
-      max-width: 100%;
-      height: 600px;
-      margin-bottom:20px;
-      background:#000;
-    }
-    .slide {
-      position: absolute;
       width: 100%;
-      height: 100%;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
+      height: 600px;
+      overflow: hidden;
+      background: #000;
     }
-    .slide.active { opacity: 1; z-index: 2; }
-    .slide img {
+    .banner-slider img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      position: absolute;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
     }
+    .banner-slider img.active {
+      opacity: 1;
+    }
+
     .prev, .next {
       position: absolute;
       top: 50%;
@@ -76,19 +72,19 @@
       padding: 10px;
       cursor: pointer;
       font-size: 24px;
-      z-index: 3;
+      z-index: 10;
     }
-    .prev { left: 10px; }
-    .next { right: 10px; }
+    .prev { left: 15px; }
+    .next { right: 15px; }
 
+    /* Dots */
     .dots {
       position: absolute;
-      bottom: 10px;
+      bottom: 15px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
       gap: 8px;
-      z-index: 3;
     }
     .dot {
       width: 12px;
@@ -97,23 +93,26 @@
       background-color: rgba(255,255,255,0.5);
       cursor: pointer;
     }
-    .dot.active { background-color: #fff; }
+    .dot.active { background-color: white; }
 
-    /* Hero / Webcam */
-    section.hero { text-align: center; padding: 20px; }
+    /* Hero */
+    section.hero {
+      text-align: center;
+      padding: 30px 10px;
+    }
     section.hero h1 { font-size: 32px; margin-bottom: 10px; }
     section.hero p { font-size: 20px; margin-bottom: 20px; }
-    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
-    #webcam-container, #label-container { margin: 15px auto; }
+    #startBtn {
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    #webcam-container, #label-container { margin-top: 20px; }
 
-    /* Responsive */
     @media(max-width:768px){
-      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
+      .banner-slider { height: 350px; }
       section.hero h1 { font-size: 24px; }
       section.hero p { font-size: 16px; }
-      .marquee-container { font-size: 18px; }
-      button#startBtn { font-size: 16px; }
-      .banner-slider { height: 350px; }
     }
   </style>
 </head>
@@ -123,11 +122,10 @@
   <nav class="navbar">
     <div class="logo">Ageflix</div>
     <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="movies.html">Movies</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Movies</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
-    <div class="icon">🎬</div>
   </nav>
 
   <!-- Marquee -->
@@ -135,24 +133,17 @@
     <div class="marquee" id="marqueeText"></div>
   </div>
 
-  <!-- Banner Slider -->
-  <section class="banner-slider" id="bannerSlider">
-    <div class="slide active">
-      <img src="https://picsum.photos/id/1018/1200/600" alt="Banner 1">
-    </div>
-    <div class="slide">
-      <img src="https://picsum.photos/id/1025/1200/600" alt="Banner 2">
-    </div>
-    <div class="slide">
-      <img src="https://picsum.photos/id/1039/1200/600" alt="Banner 3">
-    </div>
-
+  <!-- Slider -->
+  <section class="banner-slider">
+    <img src="https://picsum.photos/id/1018/1600/600" class="active" alt="Banner 1" />
+    <img src="https://picsum.photos/id/1025/1600/600" alt="Banner 2" />
+    <img src="https://picsum.photos/id/1039/1600/600" alt="Banner 3" />
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
     <div class="dots"></div>
   </section>
 
-  <!-- Hero / Age Detection -->
+  <!-- Hero -->
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
     <p>Discover movies according to your age group!</p>
@@ -168,7 +159,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
   <script>
-    // Age Detection
+    // Teachable Machine
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
     let model, webcam, maxPredictions;
 
@@ -215,42 +206,35 @@
 
     document.getElementById("startBtn").addEventListener("click", init);
 
-    // Banner Slider JS
-    const slides = document.querySelectorAll('.slide');
+    // Slider JS
+    const slides = document.querySelectorAll('.banner-slider img');
+    const dotsContainer = document.querySelector('.dots');
     const prev = document.querySelector('.prev');
     const next = document.querySelector('.next');
-    const dotsContainer = document.querySelector('.dots');
-    let slideIndex = 0;
+    let index = 0;
 
-    function showSlide(index){
-      if(index < 0) slideIndex = slides.length-1;
-      else if(index >= slides.length) slideIndex = 0;
-      else slideIndex = index;
-
-      slides.forEach((s,i)=>{
-        s.classList.remove('active');
-        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
-      });
-      slides[slideIndex].classList.add('active');
-      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
-    }
-
-    prev.addEventListener('click', ()=> showSlide(slideIndex-1));
-    next.addEventListener('click', ()=> showSlide(slideIndex+1));
-
-    // Dots
-    slides.forEach((_,i)=>{
+    // Create dots
+    slides.forEach((_, i) => {
       const dot = document.createElement('span');
       dot.classList.add('dot');
-      if(i===0) dot.classList.add('active');
-      dot.addEventListener('click', ()=>showSlide(i));
+      if(i === 0) dot.classList.add('active');
+      dot.addEventListener('click', () => showSlide(i));
       dotsContainer.appendChild(dot);
     });
 
-    // Auto slide every 5 seconds
-    setInterval(()=> showSlide(slideIndex+1), 5000);
+    function showSlide(i){
+      slides.forEach((img, n)=> img.classList.toggle('active', n===i));
+      [...dotsContainer.children].forEach((d,n)=>d.classList.toggle('active', n===i));
+      index = i;
+    }
 
-    // Marquee Text
+    prev.addEventListener('click', ()=> showSlide((index - 1 + slides.length) % slides.length));
+    next.addEventListener('click', ()=> showSlide((index + 1) % slides.length));
+
+    // Auto change every 5 seconds
+    setInterval(()=> showSlide((index + 1) % slides.length), 5000);
+
+    // Marquee messages
     const marqueeTextElem = document.getElementById('marqueeText');
     const marqueeMessages = [
       "Ageflix recommends movies based on your age",
@@ -265,10 +249,8 @@
       marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
       marqueeIndex = (marqueeIndex+1) % marqueeMessages.length;
     }
-
     setInterval(updateMarquee, 5000);
     updateMarquee();
   </script>
-
 </body>
 </html>
